# MPalace

./: Cargo.toml  README.md
src/: app.rs  main.rs  tui.rs
