[package]
name = "MPalace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.7.1"
tokio = "1.34.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.75"
futures = "0.3.29"
ratatui = "0.24.0"
crossterm = "0.27.0"
